--- a/index.html
+++ b/index.html
@@ -27,7 +27,151 @@
 <body>
     <div id="wrap">
 
+        <main id="main">
+            <section id="section01">
 
+                <div class="mainSlideWrap">
+                    <div class="slick">
+                        <div class="mainSlide mainSlide01">
+                            <div class="container">
+                                <div class="mainSlideContent">
+                                    <div class="logo">
+                                        <img src="images/main/logo.png" alt="대한민국 탐정 PIA">
+                                    </div>
+                                    <!-- //logo -->
+
+                                    <h1>
+                                        전국탐정연합
+                                    </h1>
+
+                                    <p class="text01">
+                                        전국 3,500여 명의 <strong>전직 경찰, 정보사, 기무사 출신</strong> 전문탐정들의 연합
+                                    </p>
+
+                                    <p class="text02">
+                                        <strong> 100만원 </strong>
+                                        <span>
+                                            배우자 재산 추적 성공!!!
+                                        </span>
+                                    </p>
+                                    <!-- //info -->
+
+                                    <p class="text03">
+                                        더 이상 <strong><em>거</em><em>품</em></strong>은 없다!!
+                                    </p>
+
+                                </div>
+                                <!-- //mainSlideContent -->
+
+                            </div>
+                            <!-- //container-->
+
+                        </div>
+                        <!-- //mainSlide -->
+
+                        <div class="mainSlide mainSlide02">
+                            <div class="container">
+                                <div class="mainSlideContent">
+                                    <div class="logo">
+                                        <img src="images/main/logo.png" alt="대한민국 탐정 PIA">
+                                    </div>
+                                    <!-- //logo -->
+
+                                    <h1>
+                                        전국탐정연합
+                                    </h1>
+
+                                    <p class="text01">
+                                        전국 3,500여 명의 <strong>전직 경찰, 정보사, 기무사 출신</strong> 전문탐정들의 연합
+                                    </p>
+
+                                    <p class="text02">
+                                        <strong> 100만원 </strong>
+                                        <span>
+                                            산업 스파이 사건 성공!!!
+                                        </span>
+                                    </p>
+                                    <!-- //info -->
+
+                                    <p class="text03">
+                                        더 이상 <strong><em>거</em><em>품</em></strong>은 없다!!
+                                    </p>
+
+                                </div>
+                                <!-- //mainSlideContent -->
+
+                            </div>
+                            <!-- //container-->
+
+                        </div>
+                        <!-- //mainSlide -->
+
+                        <div class="mainSlide mainSlide03">
+                            <div class="container">
+                                <div class="mainSlideContent">
+                                    <div class="logo">
+                                        <img src="images/main/logo.png" alt="대한민국 탐정 PIA">
+                                    </div>
+                                    <!-- //logo -->
+
+                                    <h1>
+                                        전국탐정연합
+                                    </h1>
+
+                                    <ul class="infoList">
+                                        <li>
+                                            철저한 <strong>비밀 보장</strong> !!
+                                        </li>
+                                        <li>
+                                            수임료 <strong>후불제</strong> 제도 !!
+                                        </li>
+                                        <li>
+                                            저렴하고 합리적인 <strong>가격</strong>!!
+                                        </li>
+                                    </ul>
+                                    <!-- //infoList -->
+
+                                    <div class="contactWrap">
+                                        <div class="callBox">
+                                            <div class="call">
+                                                <span>문의 상담 전화</span>
+                                            </div>
+                                        </div>
+                                        <!-- //callBox -->
+
+                                        <span class="number">
+                                            1599-1618
+                                        </span>
+                                        <!-- //number -->
+
+                                        <p>
+                                            언제든지 문의주시면 빠르게 상담해드리겠습니다.
+                                        </p>
+                                    </div>
+                                    <!-- //contactWrap -->
+
+                                </div>
+                                <!-- //mainSlideContent -->
+
+                            </div>
+                            <!-- //container-->
+
+                        </div>
+                        <!-- //mainSlide -->
+
+                    </div>
+                    <!-- //slick -->
+
+                </div>
+                <!-- //mainSlideWrap -->
+
+                <span class="scroll"></span>
+
+            </section>
+            <!-- //section01 -->
+
+        </main>
+        <!-- //main -->
 
     </div>
     <!-- //wrap -->
