--- a/index.html
+++ b/index.html
@@ -411,6 +411,141 @@
             </section>
             <!-- //section04 -->
 
+            <section id="section05">
+                <div class="container">
+                    <div class="section05">
+                        <div class="titleWrap">
+                            <h1>
+                                <span>자격을 갖춘</span>
+                                <strong>
+                                    <em>베</em><em>테</em><em>랑</em><em>전</em><em>문</em><em>팀</em>
+                                </strong>
+                            </h1>
+                        </div>
+                        <!-- //titleWrap -->
+
+                        <p class="text01">
+                            전국탐정연합은 전국 <strong>전직 경찰, 정보사, 기무사 출신</strong>으로 <br>
+                            철저한 보안 속에 업무를 수행합니다.
+                        </p>
+                        <!-- //text01 -->
+
+                        <h2>
+                            대표 탐정 4인
+                        </h2>
+
+                        <ul class="certList">
+                            <li>
+                                <img src="images/main/cert01.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="images/main/cert02.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="images/main/cert03.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="images/main/cert04.jpg" alt="">
+                            </li>
+                        </ul>
+                        <!-- //certList -->
+
+                    </div>
+                    <!-- //section05 -->
+
+                </div>
+                <!-- //container -->
+
+            </section>
+            <!-- //section05 -->
+
+            <section id="section06">
+                <div class="container">
+                    <div class="section06">
+                        <div class="titleWrap">
+
+                            <p class="title">
+                                전국탐정연합은 변호사와 회계사 등 <br>
+                                <strong>M.O.U 채결</strong>로 전문 인력과 협업중입니다.
+                            </p>
+                            <!-- //title -->
+
+                        </div>
+                        <!-- //titleWrap -->
+
+                        <p class="text01">
+                            전국탐정연합은 민·형사 문제 및 법률 상담 등 다양한 분야의 업무를 지원하고 있습니다.
+                        </p>
+                        <!-- //text01 -->
+
+                        <div class="imgWrap">
+                            <img src="images/main/mou_img.png" alt="">
+                        </div>
+                        <!-- //imgWrap -->
+
+                    </div>
+                    <!-- //section06 -->
+
+                </div>
+                <!-- //container -->
+
+            </section>
+            <!-- //section06 -->
+
+            <section id="section07">
+                <div class="container">
+                    <div class="section07">
+                        <div class="titleWrap">
+                            <div class="title">
+                                <h1>
+                                    <span>
+                                        전국탐정연합
+                                    </span>
+                                    <strong>
+                                        유튜브
+                                    </strong>
+                                </h1>
+                            </div>
+                            <!-- //title -->
+
+                        </div>
+                        <!-- //titleWrap -->
+
+                        <ul class="videoList">
+                            <li>
+                                <div class="videoBox"></div>
+                            </li>
+                            <li>
+                                <div class="videoBox"></div>
+                            </li>
+                            <li>
+                                <div class="videoBox"></div>
+                            </li>
+                            <li>
+                                <div class="videoBox"></div>
+                            </li>
+                            <li>
+                                <div class="videoBox"></div>
+                            </li>
+                            <li>
+                                <div class="videoBox"></div>
+                            </li>
+                        </ul>
+                        <!-- //videoWrap -->
+
+                        <a href="#" class="view">
+                            <span>영상보러가기</span>
+                        </a>
+
+                    </div>
+                    <!-- //section07 -->
+
+                </div>
+                <!-- //container -->
+
+            </section>
+            <!-- //section07 -->
+
         </main>
         <!-- //main -->
 
