--- a/index.html
+++ b/index.html
@@ -663,7 +663,8 @@
                     <div class="footer">
 
                         <address>
-                            부산광역시 해운대구 센텀중앙로 48, 513호(우동, 에이스하이테크21) &nbsp;&nbsp;&nbsp; <br> 대표자명. 정승만 &nbsp;&nbsp;&nbsp;사업자등록번호. 123-45-67890 <br>
+                            부산광역시 해운대구 센텀중앙로 48, 513호(우동, 에이스하이테크21) &nbsp;&nbsp;&nbsp; <br> 대표자명. 정승만
+                            &nbsp;&nbsp;&nbsp;사업자등록번호. 123-45-67890 <br>
                             Tel. 1599-1618&nbsp;&nbsp;&nbsp; E-mail. wjdtmdaks1@naver.com
                         </address>
 
@@ -685,6 +686,18 @@
 
     </div>
     <!-- //wrap -->
+
+    <aside>
+        <a href="#">
+            <img src="images/main/aside_call.png" alt="">
+        </a>
+        <a href="#">
+            <img src="images/main/aside_kakao.png" alt="">
+        </a>
+        <a href="#" class="top">
+            <img src="images/main/aside_top.png" alt="">
+        </a>
+    </aside>
 
 
 </body>
